tests/fail/unaligned_pointers/atomic_unaligned.stderr
error: Undefined Behavior: accessing memory with alignment ALIGN, but alignment ALIGN is required
  --> $DIR/atomic_unaligned.rs:LL:CC
   |
LL |         ::std::intrinsics::atomic_load_seqcst(zptr);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ accessing memory with alignment ALIGN, but alignment ALIGN is required
   |
   = help: this usually indicates that your program performed an invalid operation and caused Undefined Behavior
   = help: but due to `-Zmiri-symbolic-alignment-check`, alignment errors can also be false positives
   = note: BACKTRACE:
   = note: inside `main` at $DIR/atomic_unaligned.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

